--- a/app/template/admin/Order/index.twig
+++ b/app/template/admin/Order/index.twig
@@ -514,8 +514,8 @@ file that was distributed with this source code.
                                                 </td>
                                                 <td class="align-middle text-left">
                                                     <a class="action-edit" href="{{ url('admin_order_edit', { id : Order.id }) }}">{{ Order.order_no }}
-                                                        <br>
-                                                        {{ Order.name01|format_name(Order.name02) }}<br>{{ Order.order_date|date_min }}</a>
+                                                       <br>
+                                                       {# {{ Order.name01|format_name(Order.name02) }} #} <!-- <br> --> {{ Order.order_date|date_min }}</a>
                                                 </td>
                                                 <td class="align-middle text-center">
                                                     {{ Order.payment_method }}
