--- a/app/template/admin/Company/create.twig
+++ b/app/template/admin/Company/create.twig
@@ -65,6 +65,7 @@ file that was distributed with this source code.
                             <div class="row mb-2">
                                 <div class="col-3">
                                     <span>{{ 'admin.common.company_name'|trans }}</span>
+                                    <span class="badge badge-primary ml-1">{{ 'admin.common.required'|trans }}</span>
                                 </div>
                                 <div class="col">
                                     {{ form_widget(form.name) }}
@@ -84,7 +85,7 @@ file that was distributed with this source code.
                 <div class="col-6">
                     <div class="c-conversionArea__leftBlockItem">
                         <a class="c-baseLink"
-                            href="{{ url('admin_customer_page', { page_no : app.session.get('eccube.admin.company.search.page_no')|default('1') } ) }}?resume=1">
+                            href="{{ url('admin_company_page', { page_no : app.session.get('eccube.admin.company.search.page_no')|default('1') } ) }}?resume=1">
                             <i class="fa fa-backward" aria-hidden="true"></i>
                             <span>{{ 'admin.customer.company_all'|trans }}</span>
                         </a>
