--- a/app/template/admin/Company/index.twig
+++ b/app/template/admin/Company/index.twig
@@ -185,7 +185,7 @@ file that was distributed with this source code.
                                 </table>
                                 <div class="row justify-content-md-center mb-4">
                                     {% if pagination.totalItemCount > 0 %}
-                                        {% include "@admin/pager.twig" with { 'pages' : pagination.paginationData, 'routes' : 'admin_customer_page' } %}
+                                        {% include "@admin/pager.twig" with { 'pages' : pagination.paginationData, 'routes' : 'admin_company_page' } %}
                                     {% endif %}
                                 </div>
                             </div>
