--- a/app/template/admin/Company/index.twig
+++ b/app/template/admin/Company/index.twig
@@ -40,60 +40,19 @@ file that was distributed with this source code.
                 <div class="row justify-content-start">
                     <div class="col-6">
                         <div class="mb-2">
-                            <label class="col-form-label" data-tooltip="true" data-placement="top" title="{{ 'tooltip.customer.multi_search_label'|trans }}">{{ 'admin.company.multi_search_label'|trans }}<i class="fa fa-question-circle fa-lg ml-1"></i></label>
-                            {{ form_widget(searchForm.multi) }}
-                            {{ form_errors(searchForm.multi) }}
+                            <label class="col-form-label" data-tooltip="true" data-placement="top" title="{{ 'tooltip.customer.multi_search_label'|trans }}">{{ 'admin.common.company_code'|trans }}<i class="fa fa-question-circle fa-lg ml-1"></i></label>
+                            {{ form_widget(searchForm.id) }}
+                            {{ form_errors(searchForm.id) }}
                         </div>
-                        <div class="d-inline-block mb-3 collapsed" data-toggle="collapse" href="#searchDetail" aria-expanded="false" aria-controls="searchDetail"><a><i class="fa font-weight-bold mr-1 fa-plus-square-o"></i><span class="font-weight-bold">{{ 'admin.common.search_detail'|trans }}</span></a></div>
                     </div>
-                </div>
-            </div>
-            <div class="c-subContents ec-collapse collapse{{ has_errors ? ' show' }}" id="searchDetail">
-                <div class="row mb-2">
-                    <div class="col">
-                        <div>
-                            <label>{{ 'admin.common.create_date'|trans }}</label>
-                            <div class="form-row align-items-center">
-                                <div class="col">
-                                    {{ form_widget(searchForm.create_date_start) }}
-                                    {{ form_errors(searchForm.create_date_start) }}
-                                </div>
-                            </div>
+                    <div class="col-6">
+                        <div class="mb-2">
+                            <label class="col-form-label" data-tooltip="true" data-placement="top" title="{{ 'tooltip.customer.multi_search_label'|trans }}">{{ 'admin.common.company_name'|trans }}<i class="fa fa-question-circle fa-lg ml-1"></i></label>
+                            {{ form_widget(searchForm.name) }}
+                            {{ form_errors(searchForm.name) }}
                         </div>
                     </div>
                 </div>
-                <div class="row mb-2">
-                    <div class="col">
-                        <div>
-                            <label>{{ 'admin.common.update_date'|trans }}</label>
-                            <div class="form-row align-items-center">
-                                <div class="col">
-                                    {{ form_widget(searchForm.update_date_start) }}
-                                    {{ form_errors(searchForm.update_date_start) }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                {# エンティティ拡張の自動出力 #}
-                {% for f in searchForm if f.vars.eccube_form_options.auto_render %}
-                    {# TODO 1項目1行になるのを改善 #}
-                    <div class="row mb-2">
-                        {% if f.vars.eccube_form_options.form_theme %}
-                            {% form_theme f f.vars.eccube_form_options.form_theme %}
-                            {{ form_row(f) }}
-                        {% else %}
-                            <div class="col">
-                                <div class="mb-3">
-                                    <label>{{ f.vars.label|trans }}</label>
-                                    {{ form_widget(f) }}
-                                    {{ form_errors(f) }}
-                                </div>
-                            </div>
-                        {% endif %}
-                    </div>
-                {% endfor %}
             </div>
         </div>
         
