update CRUD company 2

--- a/app/template/admin/Company/index.twig
+++ b/app/template/admin/Company/index.twig
@@ -12,7 +12,7 @@ file that was distributed with this source code.
 
 {% set menus = ['customer', 'customer_master'] %}
 
-{% block title %}{{ 'admin.customer.company_list'|trans }}{% endblock %}
+{% block title %}{{ 'admin.company.company_list'|trans }}{% endblock %}
 {% block sub_title %}{{ 'admin.company.company_management'|trans }}{% endblock %}
 
 {% form_theme searchForm '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
