--- a/app/template/admin/Company/create.twig
+++ b/app/template/admin/Company/create.twig
@@ -13,7 +13,7 @@ file that was distributed with this source code.
 
 {% set menus = ['customer', 'customer_edit'] %}
 
-{% block title %}{{ 'admin.customer.company_registration'|trans }}{% endblock %}
+{% block title %}{{ 'admin.company.company_registration'|trans }}{% endblock %}
 {% block sub_title %}{{ 'admin.customer.customer_management'|trans }}{% endblock %}
 
 {% form_theme form '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
@@ -35,7 +35,7 @@ file that was distributed with this source code.
                     <div class="card-header">
                         <div class="row">
                             <div class="col-8"><span
-                                    class="card-title">{{ 'admin.customer.company_info'|trans }}</span>
+                                    class="card-title">{{ 'admin.company.company_info'|trans }}</span>
                             </div>
                             <div class="col-4 text-right">
                                 <a data-toggle="collapse" href="#ordererInfo" aria-expanded="false"
@@ -87,7 +87,7 @@ file that was distributed with this source code.
                         <a class="c-baseLink"
                             href="{{ url('admin_company_page', { page_no : app.session.get('eccube.admin.company.search.page_no')|default('1') } ) }}?resume=1">
                             <i class="fa fa-backward" aria-hidden="true"></i>
-                            <span>{{ 'admin.customer.company_all'|trans }}</span>
+                            <span>{{ 'admin.company.company_all'|trans }}</span>
                         </a>
                     </div>
                 </div>
