--- a/src/Eccube/Resource/template/admin/Company/create.twig
+++ b/src/Eccube/Resource/template/admin/Company/create.twig
@@ -13,8 +13,7 @@ file that was distributed with this source code.
 
 {% set menus = ['customer', 'customer_edit'] %}
 
-{% block title %}{{ 'admin.customer.company_registration'|trans }}{% endblock %}
-{% block sub_title %}{{ 'admin.customer.customer_management'|trans }}{% endblock %}
+{% block title %}{{ 'admin.company.company_registration'|trans }}{% endblock %}
 
 {% form_theme form '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
 
