--- a/html/template/default/assets/css/style.css
+++ b/html/template/default/assets/css/style.css
@@ -8987,6 +8987,17 @@ Styleguide 22.1
 
 .pre-scrollable {
   margin-top: 20px;
-  max-height: 675px;
+  max-height: 660px;
+}
+
+.ec-shelfGrid__content{
+  text-align: center;
+}
+
+.price02-default{
+  box-sizing: border-box;
+  /* width: 75%; */
+  border: 1px solid #33A8D0;
+  border-radius: 10px;
 }
 /*# sourceMappingURL=maps/style.css.map */
