Update page index ( show product ) ver2

--- a/app/template/default/Block/show_products.twig
+++ b/app/template/default/Block/show_products.twig
@@ -24,7 +24,7 @@ file that was distributed with this source code.
                                 {% if Product.description_list %}
                                     <p>{{ Product.description_list|raw|nl2br }}</p>
                                 {% endif %}
-                                <p class="price02-default">
+                                <p class="price02-default-home">
                                     {% if Product.hasProductClass %}
                                         {% if Product.getPrice02Min == Product.getPrice02Max %}
                                             {{ Product.getPrice02IncTaxMin|price }}
