--- a/app/template/default/Block/logo.twig
+++ b/app/template/default/Block/logo.twig
@@ -12,16 +12,16 @@ file that was distributed with this source code.
     <div class="ec-headerRole__title">
         <div class="ec-headerTitle">
             <div class="ec-headerTitle__title">
-                {% if subtitle is defined and subtitle is not empty or title is defined and title is not empty%}
+                {% if title is defined and title == 'common.move_to_page_top'|trans %}
                     <h1>
                         <a href="{{ url('homepage') }}">
-                            {{ BaseInfo.shop_name }}
+                            {{ 'front.product.product_list'|trans }}
                         </a>
                     </h1>
                 {% else %}
                     <h1>
                         <a href="{{ url('homepage') }}">
-                            {{ 'front.product.product_list'|trans }}
+                            {{ BaseInfo.shop_name }}
                         </a>
                     </h1>
                 {% endif %}
