Reposive Iphone 14 Pro ( history order )

--- a/app/template/default/Mypage/history.twig
+++ b/app/template/default/Mypage/history.twig
@@ -182,7 +182,7 @@ file that was distributed with this source code.
             </div>
         </div>
         <div class="ec-role">
-            <a href="{{ url('mypage') }}" class="ec-inlineBtn">{{ 'common.back'|trans }}</a>
+            <a href="{{ url('mypage') }}" class="ec-inlineBtn"><span>{{ 'common.back'|trans }}</span></a>
         </div>
     </div>
 {% endblock %}
