--- a/src/Eccube/Resource/template/default/pager.twig
+++ b/src/Eccube/Resource/template/default/pager.twig
@@ -24,7 +24,7 @@ file that was distributed with this source code.
             <li class="ec-pager__item ec-page_btn">
                 <a class="ec-page_a-item" href="{{ path(
                 app.request.attributes.get('_route'),
-                app.request.query.all|merge({'pageno': pages.previous})) }}"><span class="ec-page_btn-pre">{{ 'common.prev'|trans }}</span></a></li>
+                app.request.query.all|merge({'pageno': pages.previous})) }}"><span>{{ 'common.prev'|trans }}</span></a></li>
         {% endif %}
 
         {# 1ページリンクが表示されない場合、「...」を表示 #}
